--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,17 +85,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Set SSH Environment
-        env:
-          DOCS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$ACTIONS_DEPLOY_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com > ~/.ssh/known_hosts
-          chmod 700 ~/.ssh && chmod 600 ~/.ssh/*
-          git config --local user.email "vbenadmin@163.com"
-          git config --local user.name "vbenAdmin"
+      # - name: Set SSH Environment
+      #   env:
+      #     DOCS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+      #   run: |
+      #     mkdir -p ~/.ssh/
+      #     echo "$ACTIONS_DEPLOY_KEY" > ~/.ssh/id_rsa
+      #     chmod 600 ~/.ssh/id_rsa
+      #     ssh-keyscan github.com > ~/.ssh/known_hosts
+      #     chmod 700 ~/.ssh && chmod 600 ~/.ssh/*
+      #     git config --local user.email "vbenadmin@163.com"
+      #     git config --local user.name "vbenAdmin"
 
       # - name: Delete gh-pages branch
       #   run: |
@@ -114,5 +114,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./dist
-        with:
-          forceOrphan: true
+        # with:
+        #   forceOrphan: true
